Add variants with description on index pg

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -269,6 +269,7 @@ margin-bottom: 10px;
   background: #f3f2f1;
   padding: 20px;
   margin-bottom: 40px;
+  margin-top: 10px;
 }
 
 .current-da-block p {
@@ -300,4 +301,12 @@ margin-bottom: 10px;
 
 .cta-block p {
   margin-bottom: 3px;
+}
+
+.proto-label {
+  background: pink;
+  padding: 3px;
+  display: inline;
+  margin-bottom: 30px;
+
 }
