--- a/app/views/blue-badge-can-i-get-one-full-text.html
+++ b/app/views/blue-badge-can-i-get-one-full-text.html
@@ -344,86 +344,7 @@ Common examples of organisations that may be eligible include residential care h
 
 <p>There’s a different way to apply if you're in Northern Ireland.</p>
 
-<div class="cta-block">
-<p>
-<a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
-</p>
-</div>
-
-                      <div class="documents-chunk">
-                     <h2 class="govuk-heading-m">Documents</h2>
-                     <p>A placeholder for documents intro text</p>
-                     </div>
-
-                     <!--
-                     <div class="doc-container">
-                     <div class="doc-icon">
-                       </div>
-                       <p class="govuk-body-l"><a href="#">Who can get a Blue Badge?</a></p>
-                       <p class="govuk-body-s">HTML</p>
-                       </div>
-                       -->
-
-
-                       <div class="doc-container">
-                       <div class="doc-icon">
-                         </div>
-                         <p class="govuk-body-l"><a href="#">Who can get a Blue Badge? (easy read version)</a></p>
-                         <p class="govuk-body-s">PDF, 2.24 MB, 13 pages</p>
-                         <p>This file may not be suitable for users of assistive technology.</p>
-
-                         <details class="govuk-details" data-module="govuk-details">
-                           <summary class="govuk-details__summary">
-                             <span class="govuk-details__summary-text">
-                               Request an accessible format.
-                             </span>
-                           </summary>
-                           <div class="govuk-details__text">
-                             If you use assistive technology (such as a screen reader) and need a version of this document in a more accessible format, please email webmasterdft@dft.gov.uk. Please tell us what format you need. It will help us if you say what assistive technology you use.
-                           </div>
-                         </details>
-                       </div>
-
-                         <div class="doc-container">
-                         <div class="doc-icon">
-                           </div>
-                           <p class="govuk-body-l"><a href="#">Who can get a Blue Badge? (large type version, for printing)</a></p>
-                           <p class="govuk-body-s">PDF, 236 KB, 10 pages</p>
-                           <p>This file may not be suitable for users of assistive technology.</p>
-                           <details class="govuk-details" data-module="govuk-details">
-                             <summary class="govuk-details__summary">
-                               <span class="govuk-details__summary-text">
-                                 Request an accessible format.
-                               </span>
-                             </summary>
-                             <div class="govuk-details__text">
-                               If you use assistive technology (such as a screen reader) and need a version of this document in a more accessible format, please email webmasterdft@dft.gov.uk. Please tell us what format you need. It will help us if you say what assistive technology you use.
-                             </div>
-                           </details>
-                            </div>
-
-
-
-
-                           <div class="doc-container">
-                           <div class="doc-icon">
-                             </div>
-                             <p class="govuk-body-l"><a href="#">Who can get a Blue Badge? (audio)</a></p>
-                             <p class="govuk-body-s">http://assets.dft.gov.uk/publications/blue-badge-audio/who-can-get-a-blue-badge.mp3</p>
-                            </div>
-
-                      <!--
-                     <h2 class="govuk-heading-m">Details</h2>
-                     <p>A guide to who qualifies for a Blue Badge, including:</p>
-                     <ul class="govuk-list govuk-list--bullet">
-                       <li>who automatically qualifies for a Blue Badge</li>
-                       <li>people who may qualify</li>
-                       <li>applying for a Blue Badge with a non-visible (hidden) condition</li>
-                       <li>what you need to apply</li>
-                       <li>providing proof of benefits and eligibility</li>
-                       <li>badges for organisations</li>
-                       </ul>
-                       -->
+<p class="govuk-heading-s"><a href="#">Apply for a Blue Badge in England, Scotland and Wales</a></p>
 
 
 
