--- a/app/views/blue-badge-can-i-get-one-statutory.html
+++ b/app/views/blue-badge-can-i-get-one-statutory.html
@@ -57,7 +57,7 @@
 
          <h1 class="govuk-heading-xl">Who can get a Blue Badge</h1>
 
-         <p class="content-type-name">Guidance
+         <p class="content-type-name">Statutory guidance
          <span class="content-desc">&mdash; Blue Badge parking for people with disabilities: who can get a badge and how to apply.</span></p>
 
          <div class="page-actions-button">
@@ -344,11 +344,8 @@ Common examples of organisations that may be eligible include residential care h
 
 <p>There’s a different way to apply if you're in Northern Ireland.</p>
 
-<div class="cta-block">
-<p>
-<a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
-</p>
-</div>
+<p class="govuk-heading-s"><a href="#">Apply for a Blue Badge in England, Scotland and Wales</a></p>
+
 
                       <div class="documents-chunk">
                      <h2 class="govuk-heading-m">Documents</h2>
