--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,8 +16,10 @@ GOV.UK Universal Content Type
       <p><a href="universal-type-features-banner">Universal content format - basic features</a></p>
 
         <h2 class="govuk-heading-m">Content examples</h2>
-      <p><a href="blue-badge-can-i-get-one">Guidance page: Who can get a Blue Badge (full text)</a</p>
-        <p><a href="blue-badge-can-i-get-one-downloads">Guidance page: Who can get a Blue Badge (downloads)</a</p>
+      <p><a href="blue-badge-can-i-get-one">Design 1: Text and downloads</a</p>
+      <p><a href="blue-badge-can-i-get-one-downloads">Design 2: Text and downloads (downloads)</a</p>
+      <p><a href="blue-badge-can-i-get-one-full-text">Design 3: Text only</a</p>
+      <p><a href="blue-badge-can-i-get-one-statutory">Design 4: Statutory guidance label</a</p>
 
 
 
