--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -106,7 +106,11 @@
              <div class="govuk-width-container content-type-body">
                <div class="govuk-grid-row">
                  <div class="govuk-grid-column-two-thirds">
+
+
                    <!-- Devolved Administration picker -->
+                    <h2 class="govuk-body-m proto-label">Experimental Devolved Nations block</h2>
+
                    <div class="devolved-admin-picker">
                      <div class="devolved-admin-picker-selected">
                    <p class="govuk-body-m">This guidance applies to England</span>
@@ -116,6 +120,14 @@
                    </div>
                    </div>
 
+                   <h2 class="govuk-body-m proto-label">Live Devolved Nations block</h2>
+
+                   <div class="current-da-block">
+                     <p class="govuk-body-m govuk-!-font-weight-bold">Applies to England</p>
+                     <p><a href="#">Publication for Wales</a> </p>
+                    <p><a href="#">Publication for Scotland</a></p>
+                    <p><a href="#">Publication for Northern Ireland</a></p>
+                     </div>
                    <!-- Main content -->
                    <div class="main-content">
                      <h2 class="govuk-heading-m">Subheading H2 example</h2>
