--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -139,6 +139,8 @@
 
                    <!-- Generic notice -->
 
+                   <h2 class="govuk-body-m proto-label">Experimental Notice</h2>
+
                    <div class="generic-notice">
                      <div class="generic-notice-title">
                    <h2 class="govuk-heading-s">This is an example of a notice title</h2>
