--- a/app/views/blue-badge-can-i-get-one-full-text.html
+++ b/app/views/blue-badge-can-i-get-one-full-text.html
@@ -136,13 +136,24 @@
 
 
 
-                     <p>Blue Badges help people with disabilities or health conditions park closer to their destination. You can apply for a badge for yourself, on behalf of somebody else or an organisation that transports people that need a Blue Badge.</p>
+                       <p>Blue Badges help people with disabilities or health conditions park closer to their destination.</p>
 
-                     <p>In England, Scotland and Wales you can apply on GOV.UK for a Blue Badge.</p>
+       <p>You can apply for a badge for:</p>
 
-                     <p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
+       <ul class="govuk-list govuk-list--bullet">
+         <li>yourself</li>
+         <li>somebody else</li>
+        <li>an organisation that transports people that need a Blue Badge.</li>
+        </ul>
 
-                    <p>There’s a different way to <a href="#">apply if you’re in Northern Ireland</a>.</p>
+        <div class="cta-block">
+        <p>
+        <a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
+        </p>
+        </div>
+
+      <p> There’s a different way to <a href="#">apply if you’re in Northern Ireland</a>.</p>
+
 
                     <h2 class="govuk-heading-m">People who automatically get a Blue Badge</h2>
 
@@ -335,16 +346,6 @@ An organisation may be eligible for a badge (or multiple badges), if they both:<
 <p>
 Common examples of organisations that may be eligible include residential care homes, hospices or local council social services departments. It is unlikely that taxi or private hire operators and community transport operators would be eligible for an organisational Blue Badge as they are not usually concerned with the care of disabled people.
 </p>
-
-
-<h2 class="govuk-heading-m">Apply for a Blue Badge</h2>
-<p>In <a href="https://www.gov.uk/apply-blue-badge">England, Scotland and Wales you can apply on GOV.UK</a> for a Blue Badge.</p>
-
-<p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
-
-<p>There’s a different way to apply if you're in Northern Ireland.</p>
-
-<p class="govuk-heading-s"><a href="#">Apply for a Blue Badge in England, Scotland and Wales</a></p>
 
 
 
