--- a/app/views/blue-badge-can-i-get-one.html
+++ b/app/views/blue-badge-can-i-get-one.html
@@ -136,13 +136,24 @@
 
 
 
-                     <p>Blue Badges help people with disabilities or health conditions park closer to their destination. You can apply for a badge for yourself, on behalf of somebody else or an organisation that transports people that need a Blue Badge.</p>
+                       <p>Blue Badges help people with disabilities or health conditions park closer to their destination.</p>
 
-                     <p>In England, Scotland and Wales you can apply on GOV.UK for a Blue Badge.</p>
+       <p>You can apply for a badge for:</p>
 
-                     <p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
+       <ul class="govuk-list govuk-list--bullet">
+         <li>yourself</li>
+         <li>somebody else</li>
+        <li>an organisation that transports people that need a Blue Badge.</li>
+        </ul>
 
-                    <p>There’s a different way to <a href="#">apply if you’re in Northern Ireland</a>.</p>
+        <div class="cta-block">
+        <p>
+        <a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
+        </p>
+        </div>
+
+      <p> There’s a different way to <a href="#">apply if you’re in Northern Ireland</a>.</p>
+
 
                     <h2 class="govuk-heading-m">People who automatically get a Blue Badge</h2>
 
@@ -337,32 +348,26 @@ Common examples of organisations that may be eligible include residential care h
 </p>
 
 
-<h2 class="govuk-heading-m">Apply for a Blue Badge</h2>
-<p>In <a href="https://www.gov.uk/apply-blue-badge">England, Scotland and Wales you can apply on GOV.UK</a> for a Blue Badge.</p>
 
-<p>This guidance applies in England. Guidance is also available for <a href="#">Scotland</a> and <a href="#">Wales</a>.</p>
-
-<p>There’s a different way to apply if you're in Northern Ireland.</p>
-
-<div class="cta-block">
-<p>
-<a href="#">Apply for a Blue Badge</a> if you're in England, Wales or Scotland.
-</p>
-</div>
 
                       <div class="documents-chunk">
-                     <h2 class="govuk-heading-m">Documents</h2>
-                     <p>A placeholder for documents intro text</p>
+                        <h2 class="govuk-heading-m">Documents</h2>
+
+                        <p>Download accessible versions of this guidance.</p>
+
+                        <!--
+                        <ul class="govuk-list govuk-list--bullet">
+                        <li>who automatically qualifies for a Blue Badge</li>
+                        <li>people who may qualify</li>
+                        <li>applying for a Blue Badge with a non-visible (hidden) condition</li>
+                        <li>what you need to apply</li>
+                        <li>providing proof of benefits and eligibility</li>
+                        <li>badges for organisations</li>
+                        </ul>
+                        -->
+
                      </div>
 
-                     <!--
-                     <div class="doc-container">
-                     <div class="doc-icon">
-                       </div>
-                       <p class="govuk-body-l"><a href="#">Who can get a Blue Badge?</a></p>
-                       <p class="govuk-body-s">HTML</p>
-                       </div>
-                       -->
 
 
                        <div class="doc-container">
@@ -412,18 +417,6 @@ Common examples of organisations that may be eligible include residential care h
                              <p class="govuk-body-s">http://assets.dft.gov.uk/publications/blue-badge-audio/who-can-get-a-blue-badge.mp3</p>
                             </div>
 
-                      <!--
-                     <h2 class="govuk-heading-m">Details</h2>
-                     <p>A guide to who qualifies for a Blue Badge, including:</p>
-                     <ul class="govuk-list govuk-list--bullet">
-                       <li>who automatically qualifies for a Blue Badge</li>
-                       <li>people who may qualify</li>
-                       <li>applying for a Blue Badge with a non-visible (hidden) condition</li>
-                       <li>what you need to apply</li>
-                       <li>providing proof of benefits and eligibility</li>
-                       <li>badges for organisations</li>
-                       </ul>
-                       -->
 
 
 
