--- a/app/views/blue-badge-can-i-get-one-full-text.html
+++ b/app/views/blue-badge-can-i-get-one-full-text.html
@@ -123,6 +123,7 @@
                      <div class="contents-menu">
                      <ul class="govuk-list">
                        <li>Contents</li>
+                       <li><a href="#">Overview</a></li>
                      <li><a href="#">People who automatically get a Blue Badge</a></li>
                      <li><a href="#">People who may get a Blue Badge</a></li>
                      <li><a href="#">What you need to apply for a Blue Badge</a></li>
@@ -130,10 +131,10 @@
                      <li><a href="#">Proof of eligibility</a></li>
                      <li><a href="#">How you can provide documents</a></li>
                      <li><a href="#">Blue Badges for organisations</a></li>
-                     <li><a href="#">Related guidance</a></li>
                        </ul>
                        </div>
 
+                       <h2 class="govuk-heading-m">Overview</h2>
 
 
                        <p>Blue Badges help people with disabilities or health conditions park closer to their destination.</p>
