--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -54,6 +54,9 @@
          <p class="content-type-name">Content type name
          <span class="content-desc">&mdash; Example of a description, which may be a few lines long, and it follows the content type name, which may have a role in helping users understand the type and purpose of the document (or it may not).</span></p>
 
+         <h2 class="govuk-body-m proto-label">Experimental Action Buttons</h2>
+         </br> </br>
+
          <div class="page-actions-button">
           <span class="govuk-body-s"><a href="#">Get emails about this page</a></span>
          </div>
