--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,10 +16,10 @@ GOV.UK Universal Content Type
       <p><a href="universal-type-features-banner">Universal content format - basic features</a></p>
 
         <h2 class="govuk-heading-m">Content examples</h2>
-      <p><a href="blue-badge-can-i-get-one">Design 1: Text and downloads</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads">Design 2: Text and downloads (downloads)</a</p>
-      <p><a href="blue-badge-can-i-get-one-full-text">Design 3: Text only</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads-statutory">Design 4: Statutory guidance label</a</p>
+      <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
+      <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Text and downloads (downloads)</a</p>
+      <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
+      <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: Statutory guidance label</a</p>
 
 
 
