--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,9 +17,9 @@ GOV.UK Universal Content Type
 
         <h2 class="govuk-heading-m">Content examples</h2>
       <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Text and downloads (downloads)</a</p>
+      <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Downloads only</a</p>
       <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: Statutory guidance label</a</p>
+      <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: With statutory guidance label</a</p>
 
 
 
