--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,9 +13,9 @@ GOV.UK Universal Content Type
 
 
         <h2 class="govuk-heading-m">Template</h2>
-      <p><a href="universal-type-features-banner">Universal content format - basic features</a></p>
+      <p><a href="universal-type-features-banner">Design playground</a> <span class="proto-label">Live and experimental features</span></p>
 
-        <h2 class="govuk-heading-m">Content examples</h2>
+        <h2 class="govuk-heading-m">Guidance page – content variants</h2>
       <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
       <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Downloads only</a</p>
       <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
