--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -306,5 +306,9 @@ margin-bottom: 10px;
   padding: 3px;
   display: inline;
   margin-bottom: 30px;
+}
 
+.body-img {
+  width: 90%;
+  padding-bottom: 50px;
 }
