--- a/app/views/blue-badge-can-i-get-one.html
+++ b/app/views/blue-badge-can-i-get-one.html
@@ -172,6 +172,9 @@
 If you have any score other than 10 points under descriptor E, in the ‘planning and following journeys’ activity of PIP you may still be eligible for a Blue Badge, but you do not automatically qualify. This includes if you have a higher score of 12. You will have to provide evidence to demonstrate your eligibility which will be assessed as part of your application.</p>
 </div>
 
+<img src="public/images/blue-badge.jpeg" class="body-img" alt="Image shows a photo of a parking sign for Blue Badge holders">
+
+
 <h2 class="govuk-heading-m">People who may get a Blue Badge</h2>
 
 <p>You may be eligible for a badge if one or more of the following applies:</p>
