--- a/app/views/blue-badge-can-i-get-one-full-text.html
+++ b/app/views/blue-badge-can-i-get-one-full-text.html
@@ -112,9 +112,9 @@
 
                    <div class="current-da-block">
                      <p class="govuk-body-m govuk-!-font-weight-bold">Applies to England</p>
-                     <p><a href="#">Publication for Wales</a> </p>
-                    <p><a href="#">Publication for Scotland</a></p>
-                    <p><a href="#">Publication for Northern Ireland</a></p>
+                     <p><a href="#">Guidance for Wales</a> </p>
+                    <p><a href="#">Guidance for Scotland</a></p>
+                    <p><a href="#">Guidance for Northern Ireland</a></p>
                      </div>
 
                    <!-- Main content -->
@@ -357,6 +357,14 @@ Common examples of organisations that may be eligible include residential care h
                        <div class="change-notes">
                        <p>Published 29 March 2010</p>
                        <p>Last updated 10 August 2021 <a href="#">+ show all updates</a></p>
+                       </div>
+
+                       <div class="back-to-top-link">
+                         <p class="govuk-body-s">
+                           <svg class="app-c-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="17" viewBox="0 0 13 17" aria-hidden="true" focusable="false">
+                             <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
+                           </svg>
+                           <a href="#">Back to top</a></p>
                        </div>
 
                        <div class="explore-topic">
