--- a/app/views/blue-badge-can-i-get-one-statutory.html
+++ b/app/views/blue-badge-can-i-get-one-statutory.html
@@ -430,6 +430,8 @@ Common examples of organisations that may be eligible include residential care h
                        <p>Published 29 March 2010</p>
                        <p>Last updated 10 August 2021 <a href="#">+ show all updates</a></p>
                        </div>
+                       <a href="#">Back to top</a></p>
+
 
                        <div class="explore-topic">
                          <h2 class="govuk-heading-s">Explore the topic</h2>
