--- a/app/views/blue-badge-can-i-get-one-downloads.html
+++ b/app/views/blue-badge-can-i-get-one-downloads.html
@@ -112,9 +112,9 @@
 
                    <div class="current-da-block">
                      <p class="govuk-body-m govuk-!-font-weight-bold">Applies to England</p>
-                     <p><a href="#">Publication for Wales</a> </p>
-                    <p><a href="#">Publication for Scotland</a></p>
-                    <p><a href="#">Publication for Northern Ireland</a></p>
+                     <p><a href="#">Guidance for Wales</a> </p>
+                    <p><a href="#">Guidance for Scotland</a></p>
+                    <p><a href="#">Guidance for Northern Ireland</a></p>
                      </div>
 
                    <!-- Main content -->
