--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,14 +12,35 @@ GOV.UK Universal Content Type
     <div class="govuk-grid-column-two-thirds">
 
 
-        <h2 class="govuk-heading-m">Template</h2>
-      <p><a href="universal-type-features-banner">Design playground</a> <span class="proto-label">Live and experimental features</span></p>
+        <h2 class="govuk-heading-m">Standalone content template</h2>
 
-        <h2 class="govuk-heading-m">Guidance page – content variants</h2>
-      <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Downloads only</a</p>
-      <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
-      <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: With statutory guidance label</a</p>
+
+        <p class="govuk-body-l">This work shows using one template for all of the standalone guidance pages, with the back end (not shown!) controlling the variants: eg, showing text with a downloads component, showing just downloads, showing just text, showing a different label.      <a href="https://docs.google.com/document/d/1PpYxEd28ru1YsL31riz0nOyEtkauxwx6wfv5UpQL758/edit#">Background / framing</a></p>
+
+
+
+            <h2 class="govuk-heading-m">Content variants</h2>
+          <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
+          <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Downloads only</a</p>
+          <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
+          <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: With statutory guidance label</a></p>
+
+
+          <p>This would replace 5 guidance / guide standalone content types:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>detailed guide (detailed guide schema)</li>
+              <li>guidance (publication schema)</li>
+              <li>statutory guidance (publication schema)</li>
+              <li>HTML guidance</li>
+              <li>guide (mainstream)</li>
+              </ul>
+
+            <hr>
+      <p><a href="universal-type-features-banner">Design playground</a> &mdash;
+    Palette of elements, live and experimenetal.</p>
+
+
 
 
 
