--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -348,6 +348,15 @@ margin-bottom: 10px;
     line-height: 1.5;
 }
 
+.gem-c-share-links__link-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+}
+
 .share-link {
   font-weight: bold;
   float: left;
