--- a/app/views/blue-badge-can-i-get-one-statutory.html
+++ b/app/views/blue-badge-can-i-get-one-statutory.html
@@ -432,6 +432,38 @@ Common examples of organisations that may be eligible include residential care h
                        </div>
                        <a href="#">Back to top</a></p>
 
+                       <div class="share-links">
+
+                         <p class="govuk-body-s">Share this page</p>
+                                          <ul class="gem-c-share-links__list">
+                                            <li class="gem-c-share-links__list-item">
+                                                    <a target="_blank" rel="noopener noreferrer external" data-track-category="social media" data-track-action="facebook" data-track-options="{&quot;socialAction&quot;:&quot;share&quot;,&quot;socialNetwork&quot;:&quot;facebook&quot;,&quot;socialTarget&quot;:&quot;https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.gov.uk%2Fgovernment%2Fnews%2Fforeign-secretary-to-visit-czech-republic-romania-and-slovakia&quot;}" data-ga4-link="{&quot;event_name&quot;:&quot;share&quot;,&quot;type&quot;:&quot;share this page&quot;,&quot;index&quot;:1,&quot;index_total&quot;:2,&quot;text&quot;:&quot;facebook&quot;,&quot;link_method&quot;:&quot;populated-via-js&quot;}" class="govuk-link govuk-link--no-underline gem-c-share-links__link " href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.gov.uk%2Fgovernment%2Fnews%2Fforeign-secretary-to-visit-czech-republic-romania-and-slovakia">
+                                                      <span class="gem-c-share-links__link-icon">
+                                                          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                                            <path fill="currentColor" d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
+                                                          </svg>
+                                                      </span>
+                                                      <span class="govuk-visually-hidden">
+                                                        Share on
+                                                    </span>
+                                                    <span class="share-link">Facebook</span>
+                                          </a>
+                                                  </li>
+                                                  <li class="gem-c-share-links__list-item">
+                                                    <a target="_blank" rel="noopener noreferrer external" data-track-category="social media" data-track-action="twitter" data-track-options="{&quot;socialAction&quot;:&quot;share&quot;,&quot;socialNetwork&quot;:&quot;twitter&quot;,&quot;socialTarget&quot;:&quot;https://twitter.com/share?url=https%3A%2F%2Fwww.gov.uk%2Fgovernment%2Fnews%2Fforeign-secretary-to-visit-czech-republic-romania-and-slovakia\u0026text=Foreign%20Secretary%20to%20visit%20Czech%20Republic%2C%20Romania%20and%20Slovakia&quot;}" data-ga4-link="{&quot;event_name&quot;:&quot;share&quot;,&quot;type&quot;:&quot;share this page&quot;,&quot;index&quot;:2,&quot;index_total&quot;:2,&quot;text&quot;:&quot;twitter&quot;,&quot;link_method&quot;:&quot;populated-via-js&quot;}" class="govuk-link govuk-link--no-underline gem-c-share-links__link " href="https://twitter.com/share?url=https%3A%2F%2Fwww.gov.uk%2Fgovernment%2Fnews%2Fforeign-secretary-to-visit-czech-republic-romania-and-slovakia&amp;text=Foreign%20Secretary%20to%20visit%20Czech%20Republic%2C%20Romania%20and%20Slovakia">
+                                                      <span class="gem-c-share-links__link-icon">
+                                                          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                                            <path fill="currentColor" d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"></path>
+                                                          </svg>
+                                                      </span>          <span class="govuk-visually-hidden">
+                                                        Share on
+                                                    </span>
+                                                    <span class="share-link">Twitter</span>
+                                          </a>
+                                                  </li>
+                                              </ul>
+                                              </div>
+
 
                        <div class="explore-topic">
                          <h2 class="govuk-heading-s">Explore the topic</h2>
