--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,10 +12,15 @@ GOV.UK Universal Content Type
     <div class="govuk-grid-column-two-thirds">
 
 
-        <h2 class="govuk-heading-m">Standalone content template</h2>
+        <h2 class="govuk-heading-m">Standalone content template, front-end prototype – guidance example</h2>
 
 
-        <p class="govuk-body-l">This work shows using one template for all of the standalone guidance pages, with the back end (not shown!) controlling the variants: eg, showing text with a downloads component, showing just downloads, showing just text, showing a different label.      <a href="https://docs.google.com/document/d/1PpYxEd28ru1YsL31riz0nOyEtkauxwx6wfv5UpQL758/edit#">Background / framing</a></p>
+        <p class="govuk-body-m">
+          We believe GOV.UK could be using a reduced set of flexible and consistent front end templates, which broadly map to our work on typology.</p>
+
+         <p>The standalone content template would be the most used across GOV.UK, so we've brought the concept to life in this front end prototype.</p>
+        <p> We've also used the prototype to demonstrate how we could merge 4 guidance content types (across different schemas) into one flexible 'guidance' content type.
+          <a href="https://docs.google.com/document/d/1PpYxEd28ru1YsL31riz0nOyEtkauxwx6wfv5UpQL758/edit#">Read more about why we chose guidance</a></p>
 
 
 
@@ -26,14 +31,6 @@ GOV.UK Universal Content Type
           <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: With statutory guidance label</a></p>
 
 
-          <p>This would replace 4 guidance / guide standalone content types:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>detailed guide (detailed guide schema)</li>
-              <li>guidance (publication schema)</li>
-              <li>statutory guidance (publication schema)</li>
-              <li>HTML guidance</li>
-              </ul>
 
             <hr>
       <p><a href="universal-type-features-banner">Design playground</a> &mdash;
