--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,10 +25,10 @@ GOV.UK Universal Content Type
 
 
             <h2 class="govuk-heading-m">Content variants</h2>
-          <p><a href="blue-badge-can-i-get-one">Variant 1: Text and downloads</a</p>
-          <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: Downloads only</a</p>
-          <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: Text only</a</p>
-          <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: With statutory guidance label</a></p>
+          <p><a href="blue-badge-can-i-get-one">Variant 1: If the publisher has both long-form copy and downloads</a</p>
+          <p><a href="blue-badge-can-i-get-one-downloads">Variant 2: If the publisher only has downloads</a</p>
+          <p><a href="blue-badge-can-i-get-one-full-text">Variant 3: If the publisher only has long-form copy</a</p>
+          <p><a href="blue-badge-can-i-get-one-downloads-statutory">Variant 4: If they've applied the 'statutory guidance' meta data</a></p>
 
 
 
