--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -326,6 +326,10 @@ margin-bottom: 10px;
 }
 
 
+.live-metadata-block a, a:visited {
+  color: white !important;
+}
+
 .gem-c-share-links__list {
     list-style: none;
     margin: 0;
