--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -123,18 +123,40 @@ a.dept-name-link {
 .page-actions-button {
   border-radius: 2px;
   display: inline-block;
-  border: 1px solid govuk-colour("blue");
-  padding: 10px 10px 10px 10px;
+  border: 1px solid $govuk-border-colour;
+  padding: 5px 10px 10px 10px;
   margin-right: 5px;
   background: white;
 }
 
+.action-cta {
+  padding: 5px 5px 10px 0px;
+}
+
+.print-btn {
+  display: inline-block;
+  margin-top: 5px;
+  height: 22px;
+  width: 22px;
+  background: url(../images/print_1.png) no-repeat;
+}
+
+.mail-btn {
+  display: inline-block;
+  margin-top: 5px;
+  height: 22px;
+  width: 22px;
+    background: url(../images/mail_1.png) no-repeat;
+}
+
 .content-type-name {
   font-weight: bold;
+  font-size: 22px;
 }
 
 .content-desc {
   font-weight: normal;
+  font-size: 22px;
 }
 
 .app-related-items {
@@ -151,16 +173,16 @@ a.dept-name-link {
 
 .metadata p {
   margin-bottom: 7px;
-  font-size: 90%;
+  font-size: 16px;
 }
 
 .from-place {
-
   padding-right: 20px;
 }
 
 .publish-date {
   display: block;
+  margin-top: -5px;
 }
 
 .content-type-body {
@@ -228,7 +250,8 @@ margin-bottom: -5px;
 }
 
 .change-notes p {
-  font-size: 95%;
+  font-size: 16px;
+  margin-bottom: 15px;
 }
 
 .related-links li {
@@ -273,6 +296,7 @@ margin-bottom: 10px;
 }
 
 .current-da-block p {
+  font-size: 16px;
   margin-bottom: 5px;
 }
 
@@ -322,7 +346,12 @@ margin-bottom: 10px;
 .live-metadata-block p {
   color: white !important;
   margin-bottom: 2px;
-  font-size: 95%;
+  font-size: 16px;
+}
+
+a, a:visited.live-metadata-block {
+    color: white;
+    text-decoration: none;
 }
 
 
