--- a/app/views/blue-badge-can-i-get-one.html
+++ b/app/views/blue-badge-can-i-get-one.html
@@ -39,19 +39,13 @@
        </ol>
      </div>
 
-     <!-- Research banner -->
-     <!--
-         <div class="research-banner">
-           <p class="govuk-body-s">Research banner with <a href="#">link to a survey</a></p>
-           </div>
-         -->
+
              <!-- Logo / crest -->
            <div class="logo-1">
              <div class="crest"></div>
              <div class="dept-name">
                <p class="govuk-body-m">
-                 <a class="dept-name-link" href="https://www.gov.uk/government/organisations/department-for-transport">Department</br>
-                 for Transport</a></p>
+                 <a class="dept-name-link" href="https://www.gov.uk/government/organisations/department-for-transport">Department for Transport</a></p>
                </div>
              </div>
 
@@ -61,11 +55,17 @@
          <span class="content-desc">&mdash; Blue Badge parking for people with disabilities: who can get a badge and how to apply.</span></p>
 
          <div class="page-actions-button">
-          <span class="govuk-body-s"><a href="#">Get emails about this page</a></span>
+           <div class="mail-btn">
+             </div>
+          <span class="govuk-body-s action-cta">
+            <a href="#">Get emails about this page</a></span>
          </div>
 
          <div class="page-actions-button">
-         <span class="govuk-body-s"><a href="#">Print this page</a></span>
+           <div class="print-btn">
+             </div>
+         <span class="govuk-body-s action-cta">
+           <a href="#">Print this page</a></span>
          </div>
         </div>
        </div>
@@ -102,6 +102,7 @@
             <p class="govuk-body-s"><span class="strong">Published:</span> 29 March 2010 &mdash; <a href="#">See all updates</a></p>
              </div>
 
+             </div>
              </div>
              </div>
              </div>
@@ -496,11 +497,7 @@ Common examples of organisations that may be eligible include residential care h
 
                            </a>
                          </li>
-                         <li>
-                           <a href="#">
-                             Determining eligibility for blue badge and concessionary travel
-                           </a>
-                         </li>
+
                          <li>
                            <li>
                              <a href="#">
@@ -512,16 +509,7 @@ Common examples of organisations that may be eligible include residential care h
                                Blue Badge research: eligibility for people with non-visible disabilities
                              </a>
                            </li>
-                           <li>
-                             <a href="#">
-                               Blue Badge scheme: review of eligibility criteria
-                             </a>
-                           </li>
-                           <li>
-                             <a href="#">
-                               Blue Badge (disabled parking) scheme eligibility consultation: summary of responses and outcome
-                             </a>
-                           </li>
+
                        </ul>
                      </div>
                    </div>
