Update action buttons with images on the design pattern playground

--- a/app/views/universal-type-features-banner.html
+++ b/app/views/universal-type-features-banner.html
@@ -58,11 +58,17 @@
          </br> </br>
 
          <div class="page-actions-button">
-          <span class="govuk-body-s"><a href="#">Get emails about this page</a></span>
+           <div class="mail-btn">
+             </div>
+          <span class="govuk-body-s action-cta">
+            <a href="#">Get emails about this page</a></span>
          </div>
 
          <div class="page-actions-button">
-         <span class="govuk-body-s"><a href="#">Print this page</a></span>
+           <div class="print-btn">
+             </div>
+         <span class="govuk-body-s action-cta">
+           <a href="#">Print this page</a></span>
          </div>
         </div>
        </div>
